add user password for kafka